stylesheets/stylesheet.css
/*******************************************************************************
Reset
*******************************************************************************/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font: inherit;
  vertical-align: baseline;
  font-family: "Open Sans", sans-serif;
  font-weight: 300;
  box-sizing: border-box;
}


/*******************************************************************************
Base Styling
*******************************************************************************/

a {
  color: #E44F50;
  text-decoration: none;
}


/*******************************************************************************
Header
*******************************************************************************/

header {
  background: #E44F50;
  padding: 25px 25px 25px 5px;
  position: fixed;
  display: block;
  width: 100%;
  margin-bottom: 100px;
}

header a {
  color: white;
}

header h1 {
  display: inline;
  font-size: 1em;
  position: absolute;
  margin-left: 1em;
}

header a.twitter {
  float:right;
}


/*******************************************************************************
Main
*******************************************************************************/

#main {
  width: 900px;
  margin: 0 auto;
  display: block;
  padding-top: 150px;
  padding-bottom: 50px;
}

#main #top h1 {
  font-size: 1.5em;
  text-align: center;
}

#main #top img {
  width: 50%;
  display: block;
  margin: 0 auto;
}

#main #top h2 {
  text-align: center;
}


/*******************************************************************************
Threads
*******************************************************************************/

#threads {
  margin-top: 100px;
}

#threads ul li {
  width: 30%;
  float:left;
  padding: 25px;
  border: 1px solid lightgrey;
  border-radius: 5px;
  list-style-type: none;
  margin-left: 5%;
  margin-bottom: 5%;
  height: 342px;
}

#threads ul li:nth-child(3n + 1) {
  margin-left: 0;
}

#threads ul li img {
  width: 100%;
}

#threads ul li .meta {
  text-align: center;
}

#threads ul li .meta h1.name {
  font-size: 1.5em;
  margin-bottom: .5em;
}


/*******************************************************************************
Footer
*******************************************************************************/

footer {
  background: #E44F50;
  display: block;
  float: left;
  width: 100%;
  padding: 2em 0;
  margin-top: 100px;
}

footer img {
  margin: 0 auto;
  display: block;
  width: 200px;
}



/*******************************************************************************
Adaptive Layout
*******************************************************************************/

@media screen and (max-width: 900px) {

  header {
    padding: 1em 0;
  }

  header h1 {
    text-align: center;
    float: left;
    width: 100vw;
    display: block;
    position: relative;
    margin-left: 0;
    font-size: 1.25em;
  }

  header a.twitter {
    display: none;
  }

  #main {
    padding-left: 5vw;
    padding-right: 5vw;
    width: 90vw;
  }

  #main #top img {
    width: 80vw;
  }

  #main #threads ul li {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }

}

